--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "pixi.js": "^5.3.3",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-preloaders": "^1.0.13",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
