--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "test": "jest"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "pixi.js": "^5.3.3",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.3",
     "vue-preloaders": "^1.0.13",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -40,6 +42,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
